# TaleLog

./: README.md
story_generator/: README.md  pyproject.toml
story_generator/src/story_generator/: crew.py  main.py
story_generator/src/story_generator/config/: agents.yaml  tasks.yaml
story_generator/src/story_generator/models/: story_model.py
talelog_client/: package-lock.json  package.json
talelog_client/app/api/auth/[...nextauth]/: route.ts
talelog_client/app/signin/: layout.tsx  page.tsx
talelog_server/: package.json
talelog_server/prisma/: schema.prisma
talelog_server/prisma/migrations/20241217050350_create_users_table/: migration.sql
talelog_server/prisma/migrations/20241218072028_add_user_answers_fields/: migration.sql
talelog_server/prisma/migrations/20241218081612_change_user_id_to_string/: migration.sql
talelog_server/src/: app.module.ts
talelog_server/src/domain/auth/repositories/: user.repository.ts
talelog_server/src/domain/auth/services/: auth.service.ts
talelog_server/src/domain/auth/usecases/: signin.usecase.ts
talelog_server/src/domain/story/: story.module.ts
talelog_server/src/domain/story/controllers/: story.controller.ts
talelog_server/src/domain/story/dtos/: story-query.dto.ts  story.dto.ts
talelog_server/src/domain/story/repositories/: story.repository.ts
talelog_server/src/domain/story/services/: story.service.ts
talelog_server/src/domain/story/usecases/: answer-by-story-id.ts  story-by-id.ts  story-command.ts  story-list.ts
