[project]
name = "story_generator"
version = "0.1.0"
description = "story_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
story_generator = "story_generator.main:run"
run_crew = "story_generator.main:run"
train = "story_generator.main:train"
replay = "story_generator.main:replay"
test = "story_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
